docs/apache-airflow-providers-openlineage/2.1.0/_sources/_api/airflow/providers/openlineage/plugins/listener/index.rst.txt
airflow.providers.openlineage.plugins.listener
==============================================

.. py:module:: airflow.providers.openlineage.plugins.listener


Classes
-------

.. autoapisummary::

   airflow.providers.openlineage.plugins.listener.OpenLineageListener


Functions
---------

.. autoapisummary::

   airflow.providers.openlineage.plugins.listener.get_openlineage_listener


Module Contents
---------------

.. py:class:: OpenLineageListener

   OpenLineage listener sends events on task instance and dag run starts, completes and failures.


   .. py:attribute:: log


   .. py:attribute:: extractor_manager


   .. py:attribute:: adapter


   .. py:method:: on_task_instance_running(previous_state, task_instance)


   .. py:method:: on_task_instance_success(previous_state, task_instance)


   .. py:method:: on_task_instance_failed(previous_state, task_instance, error)


   .. py:property:: executor
      :type: concurrent.futures.ProcessPoolExecutor



   .. py:method:: on_starting(component)


   .. py:method:: before_stopping(component)


   .. py:method:: on_dag_run_running(dag_run, msg)


   .. py:method:: on_dag_run_success(dag_run, msg)


   .. py:method:: on_dag_run_failed(dag_run, msg)


   .. py:method:: submit_callable(callable, *args, **kwargs)


   .. py:method:: log_submit_error(fut)


.. py:function:: get_openlineage_listener()

   Get singleton listener manager.


